# vk-messages-saver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  VK-MS.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml  stats.yml
docs/: DOCS.md
vkms/: __init__.py  actions.py  argparser.py  attachments.py  database.py  main.py  messages.py  peers.py  saver.py  users.py  utils.py
vkms/templates/: peer.html
vkms/vkscripts/: messages.js  save.js
