[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vkms"
description = "Утилита для сохранения переписок ВКонтакте"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Yaroslav Kikel", email = "yaroslav.kikel.06@inbox.ru"}
]
dependencies = [
    "pathvalidate<3,>=2.5",
    "requests<3,>=2.24",
    "Jinja2<4,>=3.1",
    "minify-html<1,>=0.8",
    "vk<4,>=3.0",
    "SQLAlchemy<2,>=1.4"
]
urls.Homepage = "https://github.com/YariKartoshe4ka/vk-messages-saver"
readme = "README.md"
keywords = ["api", "parser", "vk", "messages", "saver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Environment :: Console"
]
scripts = { vkms = "vkms.main:main" }
dynamic = ["version"]

[tool.setuptools]
packages = ["vkms"]

[tool.setuptools.dynamic]
version = {attr = "vkms.__version__"}

[tool.setuptools.package-data]
vkms = ["templates/*.html"]

[tool.setuptools_scm]
write_to = "vkms/version.py"
write_to_template = '''
"""Version information"""

__version__ = '{version}'
__version_tuple__ = {version_tuple}
'''
